ANode/test/data/SMSHOME2/bad/bad9.ecf
#======================================================================
# test recursive include
#======================================================================
%include <recursive_head.h>


echo do some work
sleep 10
echo end of job


 